Fix for missing tooltips on small screens; new text for the T1 tasks' question

--- a/app_tt/pb_apps/tt_apps/static/css/tt-struct.css
+++ b/app_tt/pb_apps/tt_apps/static/css/tt-struct.css
@@ -1,3 +1,7 @@
+#template-container {
+	width: 940px;
+}
+
 canvas {
 	border: 1px solid #9C9898;
 }
