--- a/app_tt/pb_apps/tt_apps/static/css/tt-transcribe.css
+++ b/app_tt/pb_apps/tt_apps/static/css/tt-transcribe.css
@@ -1,3 +1,8 @@
+#template-container {
+	width: 940px;
+	margin-left: 38px;
+}
+
 #table-viewer {
 	float: left;
 	overflow: auto;
